2002-05-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/GSMime.h: Tidy up and add convenience methods.
	* Source/Additions/GSMime.m: Tidy up and add convenience methods.
	Added methods to convert content between string and data for ease
	of use from java.
	* Source/NSBundle.m: ([+allBundles]) Don't enumeraste if map table
	has not been created yet.
	* Source/NSLog.m: Allow output descriptor to be changed.
	* Source/NSProcessInfo.m: Add method to change log output to go to
	another file for applications where stderr has been hijacked.

2002-05-26  Fred Kiefer <FredKiefer@gmx.de>

	* Source/Additions/GSXML.m
	Define GSXMLAttribute in the case when libxml is found. 
	Otherwise it wont compile on MS Windows.

2002-05-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/GSMime.h: Add GSMimeHeader class.
	* Source/Additions/GSMime.m: Add GSMimeHeader class.
	Update API to use GSMimeheaders rather than dictionaries.

2002-05-23  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSXML.m: Fix a few errors in last changes.
	* Source/NSString.m: Updates for GSXML changes.
	* Tools/AGSHtml.m: Updates for GSXML changes.
	* Tools/AGSIndex.m: Updates for GSXML changes.

2002-05-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/GSXML.h: Add _parent ivars
	* Source/Additions/GSXML.m: Implement memory mangement so that the
	underlying libxml data is not freed unless all objects derived from
	it have been deallocated.  Remove comments warning about original
	memory management scheme.

2002-05-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSeq.h: Fix bug matching sequences with zero length range.
	* Headers/gnustep/base/GSMime.h: Tell autogsdoc where to look for source
	* Headers/gnustep/base/GSXML.h: Updates for consistency etc.
	* Source/Additions/GSXML.m: ditto
	* Tools/AGSHtml.m: Modified for changed GSXML
	* Tools/AGSIndex.m: ditto
	* Tools/AGSParser.m: ditto
	* Tools/autogsdoc.m: ditto
	* Tools/defaults.m: Fixed typo